--- a/app/src/main/res/layout/content_monitoramento_beacon.xml
+++ b/app/src/main/res/layout/content_monitoramento_beacon.xml
@@ -18,31 +18,25 @@
         android:layout_height="wrap_content"
         android:src="@drawable/logo_exemplo"
         android:scaleType="centerInside"
+        android:maxHeight="100dp"
         android:adjustViewBounds="true" />
-
 
     <TextView
         android:id="@+id/textoMonitorando"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="25dp"
         android:textSize="16dp"
         android:gravity="center"
         android:textColor="@android:color/holo_red_light">
     </TextView>
 
-    <TextView
-        android:id="@+id/monitoringText"
+    <ListView
+        android:id="@+id/lista_noticias_monitoramento"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginTop="36dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textColor="@android:color/holo_red_dark">
-    </TextView>
+        android:layout_marginTop="5dp"
+        android:layout_height="match_parent" />
 
 
 </LinearLayout>
